--- a/index.html
+++ b/index.html
@@ -257,6 +257,16 @@
                 showNotification("Nothing to withdraw cuck", 3000, "error");
             }
         });
+        window.ethereum?.on("accountsChanged", (accounts) => {
+        if (accounts.length === 0) {
+            localStorage.removeItem("walletConnected"); // Clear connection state if disconnected
+        }
+        }); 
+        window.addEventListener("load", async () => {
+        if (localStorage.getItem("walletConnected") === "true") {
+            await connectWallet();
+        }
+});
     </script>
     <script src="resources/effect/carousel.js"></script>
     <script src="resources/effect/matrix.js"></script>
