--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p class="token-title">Claimable amount</p>
                 <div class="token-info">             
                     <span class="token-icon">💰</span>
-                    <span class="token-amount" id="userTokens">Cuck no win?</span>
+                    <span class="token-amount" id="gameRewardz">Cuck no win?</span>
                 </div>
             </div>
             <button type="button" class="button withdraw-btn" id="withdraw" disabled>Withdraw</button>
