--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
                     localStorage.setItem("walletAddress", account);
                     signer = provider.getSigner();
                    
-
+                    const getTimer = await fetch("https://gamblecigars-03493e521f39.herokuapp.com/timer");
+                    console.log(getTimer)
                     contract = new ethers.Contract(CONTRACT_ADDRESS, CONTRACT_ABI, signer);
                     rewards = new ethers.Contract(GR_ADRESS, GR_ABI, signer);
                  
