--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     const getBalance = await provider.getBalance(CONTRACT_ADDRESS);
                     const balance = ethers.utils.formatEther(getBalance)
                     document.getElementById("pot").textContent = balance;
-
+                    console.log(start)
                     showNotification("Wallet connected!", 3000, "success");
                     await updateGameState(contract, start);
                     updateWalletUI(account);
@@ -221,7 +221,7 @@
                 const getTimer = await fetch("https://gamblecigars-03493e521f39.herokuapp.com/timer");
                 const timerData = await getTimer.json();
                 const {start} = timerData;
-                
+
                 await updateGameState(contract);
                 showTransactionHash(tx.hash);
                 Math.random() > 0.8 && triggerRugged();
