--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span>Connect Wallet</span>
         </button>
         <div class="tabs">
-            <button class="tab-button active" id="tabPlaceBet">Place Bet</button>
+            <button class="tab-button active" id="tabPlaceBet">Play</button>
             <button class="tab-button" id="tabWithdraw">Money</button>
             <button class="tab-button" id="tabGameRewards">Game Rewards</button>
         </div>
@@ -83,12 +83,12 @@
         <div class="tab" id="tabContentWithdraw">
 
             <div id="tokenDisplay" class="token-display">
-                <p class="token-title">Money pot</p>
+                <p class="token-title">Money pot (eth)</p>
                 <div class="token-info">
                     <span class="token-icon">🪙</span>
                     <span class="token-amount" id="pot">Fuck all</span>
                 </div>
-                <p class="token-title">Claimable amount</p>
+                <p class="token-title">Claimable amount (eth)</p>
                 <div class="token-info">             
                     <span class="token-icon">💰</span>
                     <span class="token-amount" id="gameRewardz">Cuck no win?</span>
