--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="tabs">
             <button class="tab-button active" id="tabPlaceBet">Play</button>
             <button class="tab-button" id="tabWithdraw">Pot</button>
-            <button class="tab-button" id="tabGameRewards">Game Rewards</button>
+            <button class="tab-button" id="tabGameRewards">Rewards</button>
         </div>
         <div class="tab active" id="tabContentPlaceBet">
             <div>
