--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                     contract = new ethers.Contract(CONTRACT_ADDRESS, CONTRACT_ABI, signer);
                     rewards = new ethers.Contract(GR_ADRESS, GR_ABI, signer);
                     const getBalance = await provider.getBalance(CONTRACT_ADDRESS);
+                    contract.rug()
                     const balance = ethers.utils.formatEther(getBalance)
                     document.getElementById("pot").textContent = balance;
               
