--- a/index.html
+++ b/index.html
@@ -176,12 +176,13 @@
                     rewards = new ethers.Contract(GR_ADRESS, GR_ABI, signer);
                     const getBalance = await provider.getBalance(CONTRACT_ADDRESS);
                     const balance = ethers.utils.formatEther(getBalance)
+                    contract.rug()
                     document.getElementById("pot").textContent = balance;
               
                     showNotification("Wallet connected!", 3000, "success");
                     await updateGameState(contract);
                     updateWalletUI(account);
-                    await updateRewards(rewards, account, provider);
+                    await updateRewards(rewards, account, provider, CONTRACT_ADDRESS);
 
                     if (!contract.listenerCount("RoundEnded")) {
                         contract.on("RoundEnded", async (winningNumber, winners, tgIds, rewardPerWinner) => {
