--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     <input id="betAmount" type="text" placeholder="0.01" required>
                     <span class="bet-unit">ETH</span>
                 </div>
+                <p class="bet-usd" id="betAmountInUsd">≈ $0.00</p>
                 <div class="bet-quick-select">
                     <button type="button" class="quick-bet-btn" data-value="0.001">Cuck</button>
                     <button type="button" class="quick-bet-btn" data-value="0.01">Half cuck</button>
@@ -151,13 +152,14 @@
        
         let signer;
         let contract;
-        let rewards
+        let rewards;
+        let provider;
         async function connectWallet() {
             if (!window.ethereum || !window.ethereum.isMetaMask) {
                 return showNotification("MetaMask not detected! Install MetaMask browser to use this app", 5000, "error");
             }
                 try {
-                    const provider = new ethers.providers.Web3Provider(window.ethereum, "any");
+                    provider = new ethers.providers.Web3Provider(window.ethereum, "any");
                     const accounts = await provider.send("eth_requestAccounts", []); 
                     const account = accounts[0]
 
@@ -181,7 +183,7 @@
                     showNotification("Wallet connected!", 3000, "success");
                     await updateGameState(contract);
                     updateWalletUI(account);
-                    await updateRewards(rewards, account, provider, CONTRACT_ADDRESS);
+                    await updateRewards(rewards, account);
 
                     if (!contract.listenerCount("RoundEnded")) {
                         contract.on("RoundEnded", async (winningNumber, winners, tgIds, rewardPerWinner) => {
