--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <div class="token-info">
                         <span class="token-icon">💰</span>
                         <span class="token-amount" id="userTokens">Bag is empty</span>
+                        <span class="currency" id="currency">ETH</span>
                         <span class="bet-usd" id="rewardsInUsd">≈ $0.00</span>
 
                 </div>
