--- a/index.html
+++ b/index.html
@@ -87,16 +87,18 @@
         <div class="tab" id="tabContentWithdraw">
 
             <div id="tokenDisplay" class="token-display">
-                <p class="token-title">Total (ETH)</p>
+                <p class="token-title">Total</p>
                 <div class="token-info">
                     <span class="token-icon">🪙</span>
                     <span class="token-amount" id="pot">Fuck all</span>
+                    <span class="currency" id="currency3">ETH</span>
                     <span class="bet-usd" id="potInUsd">≈ $0.00</span>
                 </div>
-                <p class="token-title">Claimable amount (ETH)</p>
+                <p class="token-title">Claimable amount</p>
                 <div class="token-info">             
                     <span class="token-icon">💰</span>
                     <span class="token-amount" id="gameRewardz">Cuck no win?</span>
+                    <span class="currency" id="currency2">ETH</span>
                     <span class="bet-usd" id="claimInUsd">≈ $0.00</span>
 
                 </div>
@@ -112,7 +114,7 @@
                 <div class="token-info">
                         <span class="token-icon">💰</span>
                         <span class="token-amount" id="userTokens">Bag is empty</span>
-                        <span class="currency" id="currency">ETH</span>
+                        <span class="currency" id="currency1">ETH</span>
                         <span class="bet-usd" id="rewardsInUsd">≈ $0.00</span>
 
                 </div>
