--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         let contract;
         let rewards;
         let provider;
+        let account;
         async function connectWallet() {
             if (!window.ethereum || !window.ethereum.isMetaMask) {
                 return showNotification("MetaMask not detected! Install MetaMask browser to use this app", 5000, "error");
@@ -172,7 +173,7 @@
                 try {
                     provider = new ethers.providers.Web3Provider(window.ethereum, "any");
                     const accounts = await provider.send("eth_requestAccounts", []); 
-                    const account = accounts[0]
+                    account = accounts[0]
 
                     const { chainId } = await provider.getNetwork();
                     if (chainId !== 84532) {
