--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
                     if (!contract.listenerCount("RoundEnded")) {
                         contract.on("RoundEnded", async (winningNumber, winners, tgIds, rewardPerWinner) => {
                             handleRoundEnded(contract, winners, account);
+                            console.log(playerInGame)
+
                         });
                     }
                 } catch (error) {
