--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                     playerInGame = await contract.hasPlacedBet(account);
                     if (!contract.listenerCount("RoundEnded")) {
                         contract.on("RoundEnded", async (winningNumber, winners, tgIds, rewardPerWinner) => {
-                            handleRoundEnded(contract, winners, account, playerInGame, winningNumber, event.transaction.hash);
+                            console.log(event)
+                            handleRoundEnded(contract, winners, account, playerInGame, winningNumber, event);
 
                         });
                     }
