--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
                     playerInGame = await contract.hasPlacedBet(account);
                     if (!contract.listenerCount("RoundEnded")) {
                         contract.on("RoundEnded", async (winningNumber, winners, tgIds, rewardPerWinner, event) => {
-                            console.log(event)
-                            handleRoundEnded(contract, winners, account, playerInGame, winningNumber, event);
+                            handleRoundEnded(contract, winners, account, playerInGame, winningNumber, event.transactionHash);
 
                         });
                     }
