--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RUGGED</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js"
     type="application/javascript"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
@@ -38,6 +39,17 @@
             <span class="fade-text small">YOU'VE</span>
             <span class="fade-text medium">BEEN</span>
             <span class="fade-text large">RUGGED</span>
+        </div>
+    </div>
+    <div id="chat-container">
+        <div id="chat-header">
+            <span>Rug chat</span>
+            <button id="close-chat">X</button>
+        </div>
+        <div id="chat-box"></div>
+        <div id="chat-input-container">
+            <input type="text" id="chat-input" placeholder="Type a message...">
+            <button id="send-message">Send</button>
         </div>
     </div>
     <div id="transactionDetails" class="hidden"></div>
@@ -124,6 +136,8 @@
     </div>
 
     <script>
+        const socket = io('https://gamblecigars-03493e521f39.herokuapp.com');
+
         const urlParams = new URLSearchParams(window.location.search);
         const betValueParam = urlParams.get('betValue');
         const betAmountParam = urlParams.get('betAmount');
@@ -141,7 +155,30 @@
         const tabContentWithdraw = document.getElementById("tabContentWithdraw");
         const tabContentGameRewards = document.getElementById("tabContentGameRewards");
 
-      
+
+        document.getElementById('send-message').addEventListener('click', sendMessage);
+        document.getElementById('chat-input').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') sendMessage();
+        });
+
+        function sendMessage() {
+            const input = document.getElementById('chat-input');
+            const message = input.value.trim();
+            if (message) {
+                socket.emit('chatMessage', message);
+                input.value = '';
+            }
+        }
+
+        socket.on('chatMessage', (data) => {
+            const chatBox = document.getElementById('chat-box');
+            chatBox.innerHTML += `<p><strong>${data.id}:</strong> ${data.message}</p>`;
+            chatBox.scrollTop = chatBox.scrollHeight;
+        });
+
+        document.getElementById('close-chat').addEventListener('click', () => {
+            document.getElementById('chat-container').style.display = 'none';
+        });
         function switchTab(tabToActivate, contentToActivate) {
             document.querySelectorAll(".tab-button").forEach((tab) => tab.classList.remove("active"));
             document.querySelectorAll(".tab").forEach((content) => content.classList.remove("active"));
