--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         socket.on('chatMessage', (data) => {
             const chatBox = document.getElementById('chat-box');
-            chatBox.innerHTML += `<p><strong> ${data.id.slice(0, 3) + '...' + data.id.slice(-4)}:</strong> ${data.message}</p>`;
+            chatBox.innerHTML += `<p><strong>Rugger-${data.id.slice(0, 1) + data.id.slice(5, 8)}:</strong> ${data.message}</p>`;
             chatBox.scrollTop = chatBox.scrollHeight;
         });
 
